--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,12 @@
 application: root-array-523
-version: 16
+version: 17
 runtime: go
 api_version: go1
 
 handlers:
+- url: /(.*\.(gif|png|jpg|ico))$
+  static_files: static/\1
+  upload: static/.*\.(gif|png|jpg|ico)$
+
 - url: /.*
   script: _go_app
