--- a/src/app.yaml
+++ b/src/app.yaml
@@ -12,5 +12,9 @@ handlers:
   static_files: mv2/gservice/js/\1
   upload: mv2/gservice/js/.*\.js$
 
+- url: /cron/.*
+  script: _go_app
+  login: admin
+
 - url: /.*
   script: _go_app
